--- a/BuddyAPI/Buddy/Properties/launchSettings.json
+++ b/BuddyAPI/Buddy/Properties/launchSettings.json
@@ -20,11 +20,11 @@
     "Buddy": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "swagger/index.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "https://localhost:5001;http://localhost:5002"
     },
     "Docker": {
       "commandName": "Docker",
