moving to css grid, adding fixing css

--- a/Svelte/package.json
+++ b/Svelte/package.json
@@ -35,6 +35,8 @@
     }
   },
   "scripts": {
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
     "start": "electron .",
     "dist": "electron-builder",
     "postinstall": "install-app-deps"
