MORE git add -Agit add -A

--- a/Svelte/package.json
+++ b/Svelte/package.json
@@ -44,8 +44,13 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@smui-extra/accordion": "^6.0.0-beta.14",
     "@smui/button": "^6.0.0-beta.14",
     "@smui/common": "^6.0.0-beta.14",
+    "@smui/data-table": "^6.0.0-beta.14",
+    "@smui/dialog": "^6.0.0-beta.14",
+    "@smui/tab": "^6.0.0-beta.14",
+    "@smui/tab-bar": "^6.0.0-beta.14",
     "@smui/textfield": "^6.0.0-beta.14",
     "electron": "^15.3.0",
     "electron-builder": "^22.13.1",
@@ -59,6 +64,7 @@
   "dependencies": {
     "electron-reload": "^2.0.0-alpha.1",
     "sirv-cli": "^1.0.0",
+    "svelte-material-ui": "^6.0.0-beta.14",
     "svelte-spa-router": "^3.2.0"
   }
 }
