Attempt to add connection to Database

--- a/BuddyAPI/Buddy/Buddy.csproj
+++ b/BuddyAPI/Buddy/Buddy.csproj
@@ -14,7 +14,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
+    <ProjectReference Include="..\DataLayer.Events\DataLayer.Events.csproj" />
     <ProjectReference Include="..\DataLayer\DataLayer.csproj" />
+    <ProjectReference Include="..\TS.Common.Datalayer\TS.Common.Datalayer.csproj" />
     <ProjectReference Include="..\TS.Common\TS.Common.csproj" />
   </ItemGroup>
 
