--- a/BuddyAPI/Buddy/appsettings.json
+++ b/BuddyAPI/Buddy/appsettings.json
@@ -7,5 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  
+  "ConnectionStrings": {
+    "EventContext": "Server=localhost\\SQLEXPRESS;Database=events;Trusted_Connection=True;",
+    "BuddyContext": "Server=localhost\\SQLEXPRESS;Database=buddy;Trusted_Connection=True;"
+  }
 }
