working migrations - db access to fix

--- a/BuddyAPI/DataLayer.Events/DataLayer.Events.csproj
+++ b/BuddyAPI/DataLayer.Events/DataLayer.Events.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\TS.Common\TS.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
