--- a/BuddyAPI/Buddy/appsettings.json
+++ b/BuddyAPI/Buddy/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "EventContext": "Server=localhost\\SQLEXPRESS;Database=buddy;Trusted_Connection=True;",
-    "BuddyContext": "Server=localhost\\SQLEXPRESS;Database=buddy;Trusted_Connection=True;"
+    "EventDbContext": "Server=localhost\\SQLEXPRESS;Database=buddy;Trusted_Connection=True;",
+    "BuddyDbContext": "Server=localhost\\SQLEXPRESS;Database=buddy;Trusted_Connection=True;"
   }
 }
