--- a/BuddyAPI/Buddy/appsettings.json
+++ b/BuddyAPI/Buddy/appsettings.json
@@ -10,5 +10,15 @@
   "ConnectionStrings": {
     "EventDbContext": "Server=localhost\\SQLEXPRESS;Database=buddy;Trusted_Connection=True;",
     "BuddyDbContext": "Server=localhost\\SQLEXPRESS;Database=buddy;Trusted_Connection=True;"
+  },
+  "JsonWebTokenKeys": {
+    "ValidateIssuerSigningKey": true,
+    "IssuerSigningKey": "64A63153-11C1-4919-9133-EFAF99A9B456",
+    "ValidateIssuer": true,
+    "ValidIssuer": "https://localhost:7168",
+    "ValidateAudience": true,
+    "ValidAudience": "https://localhost:7168",
+    "RequireExpirationTime": true,
+    "ValidateLifetime": true
   }
 }
