--- a/BuddyAPI/BusinessLogic/BusinessLogic.csproj
+++ b/BuddyAPI/BusinessLogic/BusinessLogic.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.2.0" />
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="MediatR" Version="10.0.1" />
   </ItemGroup>
 
   <ItemGroup>
