--- a/Svelte-new/package.json
+++ b/Svelte-new/package.json
@@ -12,6 +12,7 @@
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@smui-extra/accordion": "^6.0.0-beta.15",
     "@smui/button": "^6.0.0-beta.15",
+    "@smui/chips": "^6.0.0-beta.15",
     "@smui/common": "^6.0.0-beta.15",
     "@smui/data-table": "^6.0.0-beta.15",
     "@smui/dialog": "^6.0.0-beta.15",
