--- a/react-electron-py/package.json
+++ b/react-electron-py/package.json
@@ -36,6 +36,7 @@
     "electron-is-dev": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.39.3",
     "vite": "^2.8.6"
   },
   "devDependencies": {
